--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,5 +13,6 @@ log           = "0.4"
 r2d2          = "0.8"
 r2d2-influxdb = "0.1"
 simplelog     = "0.7"
+snafu         = "0.6"
 tokio         = { version = "0.2", default-features = false, features = ["macros"] }
 twitchchat    = { version = "0.9", default-features = false, features = ["async", "tokio_rustls"] }
